# KalmanFilter

./: .gitignore  CMakeLists.txt  IPLab.pro  KalmanFilter.sln  filter.cpp  filter.h  hough_transform.cpp  hough_transform.h  image_wrapper.h  kalman_filter.cpp  kalman_filter.h  main.cpp  object_detection.cpp  object_detection.h
KalmanFilter/: KalmanFilter.vcproj
KalmanFilter/x64/Release/: BuildLog.htm
